--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>1.13.0.DATACMNS-928-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Spring Data REST -->
 
